--- a/main.css
+++ b/main.css
@@ -1,27 +1,41 @@
-.header {
-    text-align: center;
-    background-color:coral;
-    font-family: 'Courier New', Courier, monospace;
-    /* color:yellowgreen; */
+:root{
+    --green: #00FF00;
+    --white: #ffffff;
+    --black: #2e2c2c;
 }
 
-/* .links{
-    color: blueviolet;
+body{
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color:#1e1f20;
+    color: aliceblue;
+}
+
+.header{
+    /* text-align: center; */
+    background-image: url("images/background.jpeg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    /* overflow: hidden; */
+    min-height:800px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    /* -webkit-background-size: cover !important; */
+    /* background-color: coral; */
+    color: whitesmoke;
+}
+
+/* 
+.h1{
+    display: block;
+    font-variant-ligatures: common-ligatures;
+    text-rendering: optimizeLegibility;
 } */
 
-.navbar{
-    background-color:grey;
-}
-
-.navbar a{
-    display: inline-block;
-    color: yellowgreen;
-    padding: 14px 20px;
-    text-align: justify;
-}
-
-/* Change color on hover/mouse-over */
-.navbar a:hover {
-    background-color: #ddd; /* Grey background color */
-    color: black; /* Black text color */
+#name{
+    text-align: center;
+    font-size: 75px;
+    text-shadow: 0px 1px 2px black;
 }
