--- a/css/style.css
+++ b/css/style.css
@@ -490,7 +490,7 @@ body{
 
 /* -------------------------------------------------------------------------- */
 
-/* RESPONSIVE FEATURE FOR SKILLS BAR */
+/* TODO: #5 RESPONSIVE FEATURE FOR SKILLS BAR */
 
 
 /* -------------------------------------------------------------------------- */
@@ -848,7 +848,7 @@ body{
 
 
   /* -------------------------------------------------------------------------- */
-    /* PROJECTS: Responsive */
+    /* TODO: #6 PROJECTS: Responsive */
     
 
 
@@ -931,6 +931,12 @@ body{
     color:rgb(91,202,204);
 }
 
+/* -------------------------------------------------------------------------- */
+/* TODO: #7 Responsive Contact */
+
+
+
+
 
 
 /* -------------------------------------------------------------------------- */
@@ -953,6 +959,135 @@ footer a:hover{
     color:coral;
 }
 
+
+
+
+/* =================================================================== 
+ * # preloader
+ *
+ * ------------------------------------------------------------------- */
+#preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: -ms-flexbox;
+    display: -webkit-box;
+    display: flex;
+    -ms-flex-flow: row wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    flex-flow: row wrap;
+    -ms-flex-pack: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -ms-flex-line-pack: center;
+    align-content: center;
+    background: #050505;
+    z-index: 500;
+    height: 100vh;
+    width: 100%;
+    opacity: 1;
+}
+
+.no-js #preloader, .oldie #preloader {
+    display: none;
+}
+
+#loader {
+    width: 5rem;
+    height: 5rem;
+    padding: 0;
+    opacity: 1;
+}
+
+#loader:before {
+    content: "";
+    border-top: 4px solid rgba(255, 255, 255, 0.1);
+    border-right: 4px solid rgba(255, 255, 255, 0.1);
+    border-bottom: 4px solid rgba(255, 255, 255, 0.1);
+    border-left: 4px solid white;
+    -webkit-animation: load 1.1s infinite linear;
+    animation: load 1.1s infinite linear;
+    display: block;
+    border-radius: 50%;
+    width: 5rem;
+    height: 5rem;
+}
+
+@-webkit-keyframes load {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes load {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+/* ------------------------------------------------------------------- 
+ * ## page loaded
+ * ------------------------------------------------------------------- */
+
+.loaded #preloader {
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: all .6s .9s ease-in-out;
+    transition: all .6s .9s ease-in-out;
+}
+
+.loaded #preloader #loader {
+    opacity: 0;
+    -webkit-transition: opacity .6s ease-in-out;
+    transition: opacity .6s ease-in-out;
+}
+
+
+/* -------------------------------------------------------------------
+ * ## animate home content
+ * ------------------------------------------------------------------- */
+
+.preload .header, 
+.preload .home {
+    visibility: hidden;
+    opacity: 0;
+}
+
+.preload .home-content {
+    opacity: 0;
+}
+
+.loaded .header,
+.loaded .home {
+    visibility: visible;
+    opacity: 1;
+}
+
+.loaded .home-content {
+    -webkit-animation-name: fadeInUp;
+    animation-name: fadeInUp;
+    -webkit-animation-duration: 3s;
+    animation-duration: 3s;
+    -webkit-animation-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
+    animation-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+ /* -------------------------------------------------------------------------- */
 
 
 
